<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>


<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill_vertical"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_marginLeft="100px">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_text"
                    android:layout_marginTop="30px"
                     />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                <EditText
                    android:id="@+id/reg_Username"
                    android:layout_width="300px"
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="100px">

                    <requestFocus />
                </EditText>

            </TableRow>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_marginLeft="100px">

                <TextView
                    android:id="@+id/getuname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_text" 
                    android:layout_marginTop="30px"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/reg_Password"
                    android:layout_width="300px"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" 
                    android:layout_marginLeft="100px"/>

            </TableRow>

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginTop="25px">

        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10px" >

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_marginLeft="100px">

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstname_text" 
                        android:layout_marginTop="20px"/>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/reg_FirstName"
                        android:layout_width="300px"
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="100px"
                                               />

                </TableRow>

            </TableRow>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastname_text" 
                        android:layout_marginLeft="100px"
                        android:layout_marginTop="25px"/>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/reg_Lastname"
                        android:layout_width="300px"
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="100px"/>

                </TableRow>

            </TableRow>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_text" 
                        android:layout_marginLeft="100px"
                        android:layout_marginTop="25px"/>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/reg_Phone"
                        android:layout_width="300px"
                        android:layout_height="wrap_content"
                        android:inputType="phone" 
                        android:layout_marginLeft="60px"/>

                </TableRow>

            </TableRow>

        </TableRow>
    </TableLayout>
    
<TableLayout 
  		android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="200px"
                android:layout_height="wrap_content"
                android:text="@string/email_text" 
                android:layout_marginLeft="100px"
                android:layout_marginTop="25px"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/reg_Email"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" 
                android:layout_marginLeft="-10dp"/>

        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0px" 
        android:layout_marginTop="50px">

        <TableRow
            android:id="@+id/tableRow24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bt_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_text" 
                android:layout_marginLeft="200px"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bt_Reset"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:text="@string/reset_text" 
                android:layout_marginRight="20px"/>

        </TableRow>
    </TableRow>
  </TableLayout>
</LinearLayout>
</ScrollView>

